<resources>
    <string name="app_name">MTS.Teta</string>

    <string name="film_date">22.04.2021</string>
    <string name="film_age">18+</string>
    <string name="film_title">Гнев человеческий</string>
    <string name="film_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="film_actors">Актёры</string>
    <string name="film_actor_1">Джейсон Стэйтем</string>
    <string name="film_actor_2">Холт Маккэллани</string>
    <string name="film_actor_3">Джош Харнетт</string>

    <string name="menu_item_home">Домой</string>
    <string name="menu_item_profile">Профиль</string>

    <string name="text_popular">Популярное сейчас</string>

    <string name="text_title_name">Константин</string>
    <string name="text_title_email">konst.89@mail.com</string>
    <string name="text_title_interesting">Интересы</string>
    <string name="text_title_personal">Личные данные</string>
    <string name="text_hint_name">Имя</string>
    <string name="text_hint_password">Пароль</string>
    <string name="text_hint_email">E-mail</string>
    <string name="text_hint_phone">Телефон</string>
    <string name="text_title_settings">Настройки</string>
    <string name="button_notifications">Уведомления и звуки</string>
    <string name="button_confidentiality">Конфедициальность</string>
    <string name="button_theme">Тема</string>
    <string name="button_language">Язык</string>
    <string name="button_storage">Данные и память</string>
    <string name="text_title_app">Приложение</string>
    <string name="button_question">Задать вопрос</string>
    <string name="button_problem">Сообщить о проблеме</string>
    <string name="button_exit">Выйти</string>

    <string name="genre_fighters">боевики</string>
    <string name="genre_dramas">драмы</string>
    <string name="genre_comedy">комедии</string>
    <string name="genre_arthouse">артхаус</string>
    <string name="genre_melodramas">мелодрамы</string>
    <string name="genre_adventure">приключения</string>
    <string name="genre_detectives">детективы</string>
    <string name="genre_fantastic">фантастика</string>

    <string name="description_star">Star</string>
    <string name="description_movie">Movie</string>
    <string name="description_search">Search</string>
    <string name="description_profile">Profile</string>
</resources>