<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/layoutProfile"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                style="@style/TextHeaderLarge"
                android:text="@string/text_title_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStandard"
                android:text="@string/text_title_email"
                app:layout_constraintStart_toStartOf="@+id/textTitleName"
                app:layout_constraintTop_toBottomOf="@+id/textTitleName" />

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/description_profile"
                app:layout_constraintBottom_toBottomOf="@+id/textEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleName"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/textTitleInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                style="@style/TextHeaderMedium"
                android:text="@string/text_title_interesting"
                app:layout_constraintStart_toStartOf="@+id/textTitleName"
                app:layout_constraintTop_toBottomOf="@+id/textEmail" />

            <HorizontalScrollView
                android:id="@+id/genresScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleInterests"
                app:layout_constraintTop_toBottomOf="@+id/textTitleInterests">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/itemGenre1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/style_genre"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="8dp"
                        android:paddingTop="1.5dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="1.5dp"
                        android:text="@string/genre_fighters"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_genre" />

                    <TextView
                        android:id="@+id/itemGenre2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/style_genre"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="8dp"
                        android:paddingTop="1.5dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="1.5dp"
                        android:text="@string/genre_dramas"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_genre" />

                    <TextView
                        android:id="@+id/itemGenre3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/style_genre"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="8dp"
                        android:paddingTop="1.5dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="1.5dp"
                        android:text="@string/genre_comedy"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_genre" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textTitlePersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                style="@style/TextHeaderMedium"
                android:text="@string/text_title_personal"
                app:layout_constraintStart_toStartOf="@+id/textTitleInterests"
                app:layout_constraintTop_toBottomOf="@+id/genresScrollView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/InputLayoutPersonal"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitlePersonal"
                app:layout_constraintTop_toBottomOf="@+id/textTitlePersonal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputPersonal"
                    android:hint="@string/text_hint_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/InputLayoutPersonal"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitlePersonal"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputPersonal"
                    android:hint="@string/text_hint_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/InputLayoutPersonal"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitlePersonal"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputPersonal"
                    android:hint="@string/text_hint_email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/InputLayoutPersonal"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitlePersonal"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputPersonal"
                    android:hint="@string/text_hint_phone"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textTitleSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                style="@style/TextHeaderMedium"
                android:text="@string/text_title_settings"
                app:layout_constraintStart_toStartOf="@+id/textTitlePersonal"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone" />

            <Button
                android:id="@+id/buttonNavNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/ItemListMenu"
                android:text="@string/button_notifications"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleSettings"
                app:layout_constraintTop_toBottomOf="@+id/textTitleSettings" />

            <Button
                android:id="@+id/buttonNavConfidentiality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ItemListMenu"
                android:text="@string/button_confidentiality"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleSettings"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavNotifications" />

            <Button
                android:id="@+id/buttonNavTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ItemListMenu"
                android:text="@string/button_theme"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleSettings"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavConfidentiality" />

            <Button
                android:id="@+id/buttonNavLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ItemListMenu"
                android:text="@string/button_language"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleSettings"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavTheme" />

            <Button
                android:id="@+id/buttonNavStorage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ItemListMenu"
                android:text="@string/button_storage"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleSettings"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavLanguage" />

            <TextView
                android:id="@+id/textTitleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                style="@style/TextHeaderMedium"
                android:text="@string/text_title_app"
                app:layout_constraintStart_toStartOf="@+id/textTitleSettings"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavStorage" />

            <Button
                android:id="@+id/buttonNavQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/ItemListMenu"
                android:text="@string/button_question"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleApp"
                app:layout_constraintTop_toBottomOf="@+id/textTitleApp" />

            <Button
                android:id="@+id/buttonNavProblem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ItemListMenu"
                android:text="@string/button_problem"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleApp"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavQuestion" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                style="@style/ButtonExit"
                android:text="@string/button_exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/textTitleName"
                app:layout_constraintTop_toBottomOf="@+id/buttonNavProblem" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>